Переделал под  config.json

--- a/cmd/shortener/config.json
+++ b/cmd/shortener/config.json
@@ -1,1 +1,1 @@
-{"ServAddr":"localhost:8080","BaseURL":"http://localhost:8080","RepoFileName":"/home/kseikseich/Go/github.com/AlehaWP/YaPracticum.git/cmd/shortener/local.gob","DBConnString":"user=kseikseich dbname=yap sslmode=disable","EnableHTTPS":true}
+{"server_address":"localhost:80","base_url":"http://localhost:8080","file_storage_dsn":"/home/kseikseich/Go/github.com/AlehaWP/YaPracticum.git/cmd/shortener/local.gob","database_dsn":"user=kseikseich dbname=yap sslmode=disable","enable_https":true}
