--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 # Binaries
 cmd/shortener/main
 cmd/shortener/shortener
+cmd/staticlint/staticlint*
 
 # Dependency directories (remove the comment below to include it)
 vendor/
@@ -21,3 +22,6 @@ vendor/
 # IDEs directories
 .idea
 .vscode
+
+# Config files
+cmd/shortener/config.json
